updated portfolio and design

--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
         <div class="hero-content container">
             <h1>Hello, I'm<br><span class="dynamic-name">Venkatesh K</span></h1>
             <div class="hero-details">
-                <div class="job-title">Associate Software Engineer</div>
+                <div class="job-title">Software Engineer</div>
                 <div class="typing-container">
                     <p class="typing"></p>
                 </div>
-                <a href="https://github.com/VenkateshK22" class="cta-button">View My Work</a>
+                
                 <div class="location">Address: Bengaluru, KA, IN</div>
                 <div class="social-links">
                     <a href="mailto:venkateshwork2212@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="https://linkedin.com/in/venkatesh-k-20b610109"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/VenkateshK22"><i class="fab fa-github"></i></a>
                 </div>
+                
                 <a href="resume\VENKATESH_K_CV.pdf" download class="resume-download">
                     <i class="fas fa-file-download"></i>
                     Download My Resume
@@ -63,14 +64,15 @@
             </div>
             <div class="about-grid">
                 <div class="about-text">
-                    <p>Experienced software engineer with a focus on microservices, cloud infrastructure, and DevOps practices. Specializes in AWS, Kubernetes, and CI/CD pipelines.</p>
-                    <p>Proven ability to resolve critical production issues and optimize systems for scalability and efficiency.</p>
-                    <p>Awarded multiple times for operational excellence and contributions to team success.</p>
+                    <p>Dynamic Software Engineer with 2+ years of experience in AWS cloud environments, microservices, and petabyte-scale data ingestion frameworks.</p>
+                    <p>Proficient in Java, Ruby, Python, CI/CD pipelines, and Kubernetes.</p>
+                    <p>Known for resolving critical production issues, automating workflows, and leading AWS RDS migrations.</p>
+                    <p>A committed team player with a proven track record of delivering scalable solutions and meeting deadlines for feature delivery.</p>
                 </div>
                 <div class="about-stats">
                     <div class="stat-box">
                         <div class="stat-title">Years of Experience</div>
-                        <div class="stat-value">2+</div>
+                        <div class="stat-value">3+</div>
                     </div>
                     <div class="stat-box">
                         <div class="stat-title">Projects Completed</div>
@@ -99,51 +101,86 @@
             <div class="experience-card">
                 <div class="card-content">
                     <div class="company-info">
-                        <h3>Oracle Cerner - Bangalore, India</h3>
-                        <p class="role">Associate Software Engineer</p>
+                        <h3>Oracle - Bangalore, India</h3>
+                        <p class="role">Software Engineer</p>
                         <p class="date">Jan 2022 - Nov 2024</p>
                     </div>
                     <div class="achievements">
                         <div class="achievement">
-                            <i class="fas fa-trophy"></i>
+                            <i class="fas fa-code"></i>
                             <div>
-                                <h4>Resolving Production Defects</h4>
-                                <p>Reduced downtime by 30% through timely issue resolution</p>
+                                <h4>API Optimization</h4>
+                                <p>Optimized existing API endpoints by refactoring code and applying best practices, resulting in up to 40% improvement in response times.</p>
                             </div>
                         </div>
                         <div class="achievement">
-                            <i class="fas fa-chart-line"></i>
+                            <i class="fas fa-tools"></i>
                             <div>
-                                <h4>Boosting Data Processing Efficiency</h4>
-                                <p>Enhanced data throughput by 20% with Apache Storm optimizations</p>
+                                <h4>CI/CD Tool Optimization</h4>
+                                <p>Contributed to optimizing enterprise-wide CI/CD tools through collaboration with cross-functional teams and proposing innovative solutions.</p>
+                            </div>
+                        </div>
+                        <div class="achievement">
+                            <i class="fas fa-lock"></i>
+                            <div>
+                                <h4>Secure API Development</h4>
+                                <p>Built secure APIs with JWT-based authentication and role-based authorization, integrating with OAuth2 for enterprise-level security requirements.</p>
+                            </div>
+                        </div>
+                        <div class="achievement">
+                            <i class="fas fa-project-diagram"></i>
+                            <div>
+                                <h4>Feature Development</h4>
+                                <p>Led feature development from requirement gathering to deployment, collaborating with product managers, QA, and DevOps teams.</p>
+                            </div>
+                        </div>
+                        <div class="achievement">
+                            <i class="fas fa-database"></i>
+                            <div>
+                                <h4>Database Optimization</h4>
+                                <p>Optimized complex SQL queries and database indexing strategies, reducing API response latency by up to 60% and significantly improving system performance.</p>
+                            </div>
+                        </div>
+                        <div class="achievement">
+                            <i class="fas fa-shield-alt"></i>
+                            <div>
+                                <h4>System Resilience</h4>
+                                <p>Implemented the Circuit Breaker pattern using Resilience4j in Spring Boot microservices to gracefully handle service failures and improve system resilience under load.</p>
+                            </div>
+                        </div>
+                        <div class="achievement">
+                            <i class="fas fa-ticket-alt"></i>
+                            <div>
+                                <h4>Production Issue Resolution</h4>
+                                <p>Set a new team record by resolving over 60 tickets and triaging more than 25 high-priority production issues, clearing 85% of the backlog.</p>
                             </div>
                         </div>
                         <div class="achievement">
                             <i class="fas fa-robot"></i>
                             <div>
                                 <h4>Workflow Automation</h4>
-                                <p>Improved efficiency by 80% and saved 40 hours/month with Ruby scripts</p>
+                                <p>Automated operational workflows using Ruby scripts, saving over 40 hours per month and improving team efficiency by 80%.</p>
                             </div>
                         </div>
                         <div class="achievement">
-                            <i class="fas fa-server"></i>
+                            <i class="fas fa-cloud"></i>
                             <div>
                                 <h4>AWS RDS Migration</h4>
-                                <p>Cut costs and improved reliability for downstream users</p>
+                                <p>Directed the end-to-end migration of AWS RDS clusters for microservices across pre-production and production zones, cutting costs by 10% and boosting system reliability.</p>
                             </div>
                         </div>
                         <div class="achievement">
-                            <i class="fas fa-book"></i>
+                            <i class="fas fa-check-circle"></i>
                             <div>
-                                <h4>Documented Key Processess</h4>
-                                <p>Produced 5 technical manuals, cutting onboarding time by 30%</p>
+                                <h4>Feature Delivery</h4>
+                                <p>Delivered two or more features per sprint with 100% on-time completion and authored over 30 code fixes, reducing recurring issues by 50%.</p>
                             </div>
                         </div>
                         <div class="achievement">
-                            <i class="fas fa-trophy"></i>
+                            <i class="fas fa-shield-virus"></i>
                             <div>
-                                <h4>Award-Winning Contributions</h4>
-                                <p>Earned recognition for resolving a 2-year defect in 3 months</p>
+                                <h4>Secure Deployments</h4>
+                                <p>Addressed over 100 CVEs with a 99% success rate in secure deployments while maintaining 95% accurate documentation.</p>
                             </div>
                         </div>
                     </div>
@@ -288,21 +325,26 @@
                 <div class="achievement-card">
                     <i class="fas fa-trophy"></i>
                     <h3>Rockstar Award</h3>
-                    <p>Received multiple recognitions for operational excellence</p>
-                </div>
-                <div class="achievement-card">
-                    <i class="fas fa-graduation-cap"></i>
-                    <h3>P.G. Honors</h3>
-                    <p>Elected captain of coding team and president of placement</p>
+                    <p>Successfully eliminated a critical production defect, acknowledged by the U.S.-based Senior Manager.</p>
                 </div>
                 <div class="achievement-card">
                     <i class="fas fa-chart-line"></i>
-                    <h3>20% Efficiency Boost</h3>
-                    <p>Tuned Apache Storm topologies to increase throughput</p>
+                    <h3>Operational Excellence</h3>
+                    <p>Consistently recognized for effectively managing workflows and delivering sprint-level user stories across two fiscal quarters.</p>
+                </div>
+                <div class="achievement-card">
+                    <i class="fas fa-server"></i>
+                    <h3>AWS Project Recognition</h3>
+                    <p>Praised by management for successfully leading the AWS migration and optimization project, achieving cost reductions and performance improvements.</p>
+                </div>
+                <div class="achievement-card">
+                    <i class="fas fa-users"></i>
+                    <h3>Leadership</h3>
+                    <p>Elected President of Placement & Operations; led coding teams to win inter-college competitions.</p>
                 </div>
             </div>
         </div>
-    </section>
+    </section>   v 
 
     <!-- Language Skills Section -->
 <section id="languages" class="section">
